adding error template

--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -18,6 +18,12 @@
       <p>Congratulations! <br>You have successfully added Jatana to your zendesk, to continue please contact us at <a href="mailto:getstarted@jatana.ai">getstarted@jatana.ai</a> </p>
     </div>
   </script>
+  <script id="error-loading" type="text/x-handlebars-template">
+    <div style="text-align: center">
+
+      <p>Woops!! <br>We are unable to connect with our services at this point of time, please contact us at <a href="mailto:getstarted@jatana.ai">getstarted@jatana.ai</a> </p>
+    </div>
+  </script>
 
   <script id="in-progress" type="text/x-handlebars-template">
     <div style="text-align: center">
