adding new states in the app frontend

--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -12,10 +12,16 @@
     <a style='text-align: end' href="https://jatana.ai/support" target="_blank"><br><br><br><br>Report bugs</a>
   </footer>
 
-  <script id="first-time" type="text/x-handlebars-template">
+  <script id="zendesk-connect" type="text/x-handlebars-template">
+    <img src="welcome.svg" style="text-align: center;max-width: 50%;padding-left: 75px;" alt="welcome"></div>
     <div style="text-align: center">
-
-      <p>Congratulations! <br>You have successfully added Jatana to your zendesk, to continue please contact us at <a href="mailto:getstarted@jatana.ai">getstarted@jatana.ai</a> </p>
+      <p>Thanks for creating a profile. <br><br>To get Jatana up & running, please grant us access to historical conversations so that we can build a custom AI engine for you. <br>  <a href="https://jatana.motherbot.co/zendesk_profile?subdomain={{subdomain}}" target="_blank">Confirm permission</a></p>
+    </div>
+  </script>
+  <script id="dashboard-connect" type="text/x-handlebars-template">
+    <img src="welcome.svg" style="text-align: center;max-width: 50%;padding-left: 75px;" alt="welcome"></div>
+    <div style="text-align: center">
+      <p>Congratulations! <br>You have successfully added Jatana to your Zendesk! <br>To get started, please create your profile on our dashboard by clicking <a href="https://app.jatana.ai/register?subdomain={{subdomain}}" target="_blank">here</a> <br> </p>
     </div>
   </script>
   <script id="error-loading" type="text/x-handlebars-template">
