--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -69,7 +69,7 @@
     <div class="zendesk-main__content zendesk-main__content--background">
           <h2>Woops!</h2>
           <div class="zendesk-main__text zendesk-main__text--4th">
-            <p class="zendesk-main__info">{{message}}</p>
+            <p class="zendesk-main__info">{{Message}}</p>
             <p class="zendesk-main__info">{{code}}</p>
           </div>
           <a href="mailto:getstarted@jatana.ai" class="button button--orange button--constant button--contact">CONTACT SUPPORT</a>
