--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -3,10 +3,19 @@
   <link href="https://cdn.jsdelivr.net/bootstrap/2.3.2/css/bootstrap.min.css" rel="stylesheet">
   <link href="main.css" rel="stylesheet">
   <link href="css/style.zendeskapp.min.css" rel='stylesheet'>
-
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-N4WVRKB');</script>
+  <!-- End Google Tag Manager -->
 </head>
 <body>
-
+  <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N4WVRKB"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <div id="content" class="zendesk-main">
     <div class="loader"></div>
   </div>
@@ -89,7 +98,16 @@
     {{#each this}}
     <div class="zendesk-main__macros">
             <div>
-              <h2 style="line-height: 15px;">{{title}}</h2>
+              <!-- <h2 style="line-height: 15px;">{{title}}</h2> -->
+<!--
+              <a href="#" data-target="#demo" data-toggle="collapse" >CLICKABLE TEXT WOULD GO HERE INSTEAD OF BUTTON</a>
+              <div class="collapse out" id="demo">&nbsp;
+                <p>Hidden Content goes here.</p>
+              </div> -->
+              <a class=".hidden_comment" data-toggle="collapse" href=#demo{{id}} style="display: block;height: 100%;width: 100%;text-decoration: none;">{{title}}</a>
+                <div id=demo{{id}} class="collapse">
+                  {{comment}}
+                </div>
             </div>
             <a href="#" onclick=applyMacro({{id}}) data-value=macro_{{id}} class="button button--orange button--apply">APPLY</a>
           </div>
