--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -209,7 +209,7 @@
                                 </span>
                                 Book a one-to-one consultation with one of our experts and learn how to get the most of Jatana.
                             </p>
-                            <a href="https://meetings.hubspot.com/luis35" target="_blank">
+                            <a href="https://www.jatana.ai/meetings/giovannitoschi/15-min-one-on-one-consultation" target="_blank">
                             <button class="Rectangle-6 onboarding-btn" type="button">
                                 <span class="Button-text">
                                     BOOK NOW
