--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -170,7 +170,7 @@
                             <img src="images/bar-chart.png" srcset="images/bar-chart.png 2x, images/bar-chart.png 3x" class="stats3">
                             <span>No credit card required</span>
                         </p>
-                        <a href="https://app.jatana.ai" target="_blank">
+                        <a href="https://app.jatana.ai/checkout?identifier={{subdomain}}&platform=Zendesk" target="_blank">
                           <button class="Rectangle-6 onboarding-btn" type="button">
                               <span class="Button-text">
                                   UPGRADE PLAN
