--- a/assets/modal.html
+++ b/assets/modal.html
@@ -1,21 +1,49 @@
 <html>
 <head>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <meta charset="utf-8">
-  <link href="https://cdn.jsdelivr.net/bootstrap/2.3.2/css/bootstrap.min.css" rel="stylesheet">
-  <link href="main.css" rel="stylesheet">
-  <link href="css/style.zendeskapp.min.css" rel='stylesheet'>
-  <script type="text/javascript" src="https://assets.zendesk.com/apps/sdk/2.0/zaf_sdk.js"></script>
 
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Jatana</title>
+  <link href="main.css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900|Montserrat:300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="assets/vendor/pace/themes/black/pace-theme-flash.css"/>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script type="text/javascript" src="https://assets.zendesk.com/apps/sdk/2.0/zaf_sdk.js"></script>
 </head>
 <body>
-  <div class="zendesk-main__conte" style="height: 250px;">
-        <div class="zendesk-main__text" style="width: 450px;height: 160px;margin: 0 auto 59px;text-align: justify;margin-bottom: 20px;padding-top: 10px;padding-bottom: 5px;">
-          <p class="zendesk-main__info" style="font-size: 15px;">Next step, you will be asked to authorize Jatana to access your data. It will take the AI engine in between 1 to 3 days to analyze your historic customer interactions and learn how to respond to the queries that your company is receiving. By clicking the “Authorize the app” button below you agree to our
-            <a href="https://www.jatana.ai/terms" style="color: white;"> Terms and Conditions</a> as well as our <a href="https://www.jatana.ai/gdpr-whitepaper" style="color: white;">Data Protection Policy</a>. If you have any questions please reach out to Jatana.</p>
+  <div class="access_popup_container show">
+    <div class="access_popup_block" style="margin-top: 0px;margin-bottom: 0px;height: 250px;">
+      <div class="access_popup" style="height: 250px;">
+        <div class="access_popup_header">
+          <span>Activate Jatana</span>
         </div>
-        <a href="#" target="_blank" class="button button--orange" style="color: white;margin-bottom: 20px;">Authorize the app</a>
+        <div class="access_popup_body">
+          <div class="access_popup_text">
+            Next you will be asked to authorize Jatana to access support tickets stored in your Zendesk accoint. It will take the AI
+            engine
+            <strong>between 1 and 3 days</strong> to analyze all your tickets and learn how to respond to the queries that your company
+            is receiving.
+          </div>
+        </div>
+        <div class="access_popup_footer">
+          <a href=href="#" target="_blank">Grant Access</a>
+        </div>
+        <div class="access_popup_footer_extra">
+          <p class="accept_policy">By clicking the
+            <strong>Grant Access</strong> button below you agree to our
+            <a href="https://www.jatana.ai/terms">Terms and Conditions</a> as well as our
+            <a href="https://www.jatana.ai/gdpr-whitepaper">Data Protection Policy</a>
+          </p>
+          <p class="footer_text">
+            If you have any questions please reach out to
+            <strong>Jatana</strong>.
+          </p>
+        </div>
       </div>
+    </div>
+  </div>
+  <div class="popup-overlay show"></div>
   <!-- https://github.com/zendesk/zendesk_app_framework_sdk -->
   <script type="text/javascript" src="https://assets.zendesk.com/apps/sdk/2.0/zaf_sdk.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
@@ -24,7 +52,7 @@
       function getModalClient() {
         var client = ZAFClient.init();
         client.get("instances").then(function(data) {
-          console.log(data);
+          console.log(JSON.stringify(data));
             var instances = data["instances"]
             for(var key in instances) {
                 var instance = instances[key]
@@ -34,12 +62,14 @@
                 }
             }
             return null
+        }).catch(error=>{
+          console.log(error);
         })
       }
 
       $(document).ready(function(){
         console.log(window.location.hash);
-        $('.button').each(function(){
+        $('.access_popup_footer a').each(function(){
           var params = parseParams(window.location.hash);
           console.log(params);
           var identifier = params.identifier;
@@ -50,7 +80,7 @@
         });
 
     });
-    $('.zendesk-main__conte .button.button--orange').click(function(){
+    $('.access_popup_footer a').click(function(){
       console.log("event!! ")
        getModalClient();
     });
